# uiXautomation

./: ._codeclimate.yml  .travis.yml  Dockerfile  LICENSE  README.md  build.py  build.sh  docker-compose.yml
src/main/python/: MANIFEST.in  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
src/main/python/taf/: __init__.py  taf.py
src/main/python/taf/common/api/: aut.py
src/main/python/taf/common/api/io/: serializable.py
src/main/python/taf/common/model/: yamldata.py
src/main/python/taf/foundation/: __init__.py  servicelocator.py
src/main/python/taf/foundation/api/: __init__.py  browser.py  uielement.py
src/main/python/taf/foundation/api/cli/: __init__.py  client.py
src/main/python/taf/foundation/api/controls/: __init__.py  button.py  checkbox.py  collection.py  combobox.py  edit.py  link.py  listitem.py  radiogroup.py
src/main/python/taf/foundation/api/patterns/: __init__.py  container.py  expandcollapse.py  invoke.py  selection.py  toggle.py  (+1 more)
src/main/python/taf/foundation/conf/: __init__.py  config.yml  configuration.py
src/main/python/taf/foundation/enums/: __init__.py  controls.py  plugins.py
src/main/python/taf/foundation/plugins/: baseplugin.py  webplugin.py
src/main/python/taf/foundation/utils/: __init__.py  connectioncache.py  logger.py  yamldata.py
src/main/python/taf/modeling/: __init__.py
src/main/python/taf/modeling/cli/: __init__.py  clirunner.py
src/main/python/taf/modeling/svc/: __init__.py  restclient.py
src/main/python/taf/modeling/utils/: __init__.py
src/main/python/taf/modeling/web/: __init__.py  browser.py
(+124 files in other folders)
