[metadata]
author = Wesley Peng
author_email = wesley.peng@live.com

license = Apache License 2.0
url = https://github.com/WesleyPeng
platforms = posix
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing

[options]
include_package_data = True
python_requires = >=2.7.9, <3

[bdist_wheel]
python-tag = py27
plat-name = any
